--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,7 +73,10 @@ dependencies {
     //Timber log
     implementation 'com.jakewharton.timber:timber:5.0.1'
 
-    testImplementation 'junit:junit:4.13.2'
+    testImplementation 'junit:junit:4.+'
+    testImplementation "io.mockk:mockk:1.12.2"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.0"
+    testImplementation "androidx.arch.core:core-testing:2.1.0"
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 }
