--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,7 +76,9 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     testImplementation "io.mockk:mockk:1.12.2"
     testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.0"
+    testImplementation "com.google.truth:truth:1.0.1"
     testImplementation "androidx.arch.core:core-testing:2.1.0"
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
 }
